attempting to fix pi build error